Version 1.0.2
	xx 09 2015
	- fixed view records page
	- added edit functionality for rooms
	
	
Version 1.0.1
	23 08 2015
	-added the posibility to create customised rooms

Version 1.0.0 
	09 08 2015
	- added changeLog file
	- added sql updates tracker
	- added md5 passwords
	