@@ -2,6 +2,7 @@ Version 1.0.2
 	xx 09 2015
 	- fixed view records page
 	- added edit functionality for rooms
+	- added delete functionality for rooms
 	
 	
 Version 1.0.1
